--- a/etc/app-docker.ini.example
+++ b/etc/app-docker.ini.example
@@ -31,7 +31,7 @@ TaskRetryTimeout = 3600
 
 [email-config]
 Enable = false
-User = "1225807604@qq.com"
+User = "xxx@qq.com"
 Password = "xxxx"
 Host = "smtp.qq.com"
 Port = "465"
